# 9424

./: sd.sh  set.sh
leetcode/: num1_best_twosum.cpp  num1_me_twosums.cpp
try_something/SampleCode/docker/: kaiwu_docker_compose.yml
try_something/config/: Dockerfile  docker-compose.yml  requirements.txt
try_something/exercise/CppPrimerPlus/aboutFunction/: decltype.cpp  explicitTemplate.cpp  template.cpp
try_something/exercise/CppPrimerPlus/reference/: ClassObjRef.cpp  FunctionOverload.cpp  a.out
try_something/exercise/CppPrimerPlus/some_thoughts/: MultiReturn.cpp  enum.cpp
try_something/exercise/CppPrimerPlus/startpoint/: a.out  helloworld.cpp
try_something/exercise/cmake/t1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h.in  hello  main.cpp
try_something/exercise/cmake/t1/math/: CMakeLists.txt  Makefile  cmake_install.cmake  math.cpp  math.h
try_something/exercise/make/: Makefile
try_something/exercise/pythonTest/: range.py
try_something/shellPrac/: about.txt  hello.txt
try_something/shellPrac/day1/: shell.sh
try_something/shellPrac/day10/: shell.sh
try_something/shellPrac/day11/: shell.sh
try_something/shellPrac/day12/: shell.sh
try_something/shellPrac/day13/: .shell.sh.swp
try_something/shellPrac/day2/: shell.sh
try_something/shellPrac/day3/: shell.sh  test.txt
try_something/shellPrac/day4/: shell.sh
try_something/shellPrac/day5/: shell.sh
try_something/shellPrac/day6/: shell.sh
try_something/shellPrac/day7/: shell.sh
try_something/shellPrac/day8/: shell.sh
try_something/shellPrac/day9/: shell.sh
(+3 files in other folders)
